src/objects/OB_Task_Handing__c.object
<CustomObject>
    <description>This object is used for Central_Activity(Inbound Call) Handling,  Assign a munber od IB Call tasks to a number of CSRs or TLs.</description>
    <fields>
        <fullName>Assign_Type__c</fullName>
        <label>Assign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_per_Agent__c</fullName>
        <label>Assignment per Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                    <default>true</default>
                    <label>75</label>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_No__c</fullName>
        <label>Batch No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>By_Number__c</fullName>
        <label>By Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <label>CSR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Times__c</fullName>
        <label>Call Times</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign1__c</fullName>
        <label>Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign 1</fullName>
                </value>
                <value>
                    <fullName>Campaign 2</fullName>
                </value>
                <value>
                    <fullName>Campaign 3</fullName>
                </value>
                <value>
                    <fullName>Campaign 4</fullName>
                </value>
                <value>
                    <fullName>Campaign 5</fullName>
                </value>
                <value>
                    <fullName>Campaign 6</fullName>
                </value>
                <value>
                    <fullName>Campaign 7</fullName>
                </value>
                <value>
                    <fullName>Campaign 8</fullName>
                </value>
                <value>
                    <fullName>Campaign 9</fullName>
                </value>
                <value>
                    <fullName>Campaign 10</fullName>
                </value>
                <value>
                    <fullName>Campaign 11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign2__c</fullName>
        <label>Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign 1</fullName>
                </value>
                <value>
                    <fullName>Campaign 2</fullName>
                </value>
                <value>
                    <fullName>Campaign 3</fullName>
                </value>
                <value>
                    <fullName>Campaign 4</fullName>
                </value>
                <value>
                    <fullName>Campaign 5</fullName>
                </value>
                <value>
                    <fullName>Campaign 6</fullName>
                </value>
                <value>
                    <fullName>Campaign 7</fullName>
                </value>
                <value>
                    <fullName>Campaign 8</fullName>
                </value>
                <value>
                    <fullName>Campaign 9</fullName>
                </value>
                <value>
                    <fullName>Campaign 10</fullName>
                </value>
                <value>
                    <fullName>Campaign 11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Is_Parent_Campaign_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>OB Task Handings</relationshipLabel>
        <relationshipName>OB_Task_Handings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OB Task Handings</relationshipLabel>
        <relationshipName>OB_Task_Handings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equal_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equal Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evenly_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evenly Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>Created Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_Registration_Date_From__c</fullName>
        <label>Network Registration Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_Registration_Date_To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_Registration_Date__c</fullName>
        <label>Network Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Found__c</fullName>
        <defaultValue>0</defaultValue>
        <label>QC Found</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quota_Assignment__c</fullName>
        <label>Quota Assignment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome Call</fullName>
                </value>
                <value>
                    <fullName>1st Survey Call</fullName>
                </value>
                <value>
                    <fullName>2nd Survey Call</fullName>
                </value>
                <value>
                    <fullName>Welcome Call + 1st Survey Call</fullName>
                </value>
                <value>
                    <fullName>Campaign Executed</fullName>
                </value>
                <value>
                    <fullName>Campaign Auto Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspect_Dup__c</fullName>
        <label>Suspect Dup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Dup</fullName>
                </value>
                <value>
                    <fullName>Non-Dup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welcome call</fullName>
                </value>
                <value>
                    <fullName>1st servey call</fullName>
                </value>
                <value>
                    <fullName>2nd servey call</fullName>
                </value>
                <value>
                    <fullName>1st servey + welcome call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tasks_Found__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tasks Found</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unassignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unassignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OB Task Handing</label>
    <nameField>
        <label>OB Task Handing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OB Task Handings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>